# clean-py

./: .coveragerc  .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  makefile  pyproject.toml  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
clean_ipynb/: clean_ipynb.py  cli.py  dev.ipynb
clean_ipynb/dev/: dev.ipynb
clean_ipynb/dev/dev_source/: notebook_a.ipynb  script_a.py
clean_ipynb/dev/dev_source_test/: notebook_a.ipynb  script_a.py
clean_ipynb/tests/: conftest.py  test_clean_ipynb.py
clean_py/: __init__.py  clean_py.py  cli.py  dev.ipynb
clean_py/tests/: conftest.py  test_clean_ipynb.py  test_clean_py.py  test_cli.py
clean_py/tests/test_files/: example_notebook.ipynb
src/clean_py/: _version.py  clean_py.py  cli.py
tests/: conftest.py  test_clean_py.py  test_cli.py
tests/test_files/: example_notebook.ipynb  example_script.py  invalid.py  test.ipynb
